feat : novas regras de negócio
